--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,7 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/login_name"
-        android:singleLine="true"/>
+        android:singleLine="true"
+        android:autofillHints="222"
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/password_edit_text"
@@ -21,7 +22,8 @@
         android:layout_height="wrap_content"
         android:hint="@string/password"
         android:inputType="textPassword"
-        android:singleLine="true"/>
+        android:singleLine="true"
+        android:autofillHints="222" />
 
     <Button
         android:id="@+id/login_button"
